# CPP-Twenty-Forty-Eight

./: 2048.cpp  CMakeLists.txt  README.md  alpha_beta.cpp  alpha_beta.h  board.cpp  board.h
